Fix multilingual field layout bug.

--- a/assets/frontend_localisation.multilingual_tabs.css
+++ b/assets/frontend_localisation.multilingual_tabs.css
@@ -7,7 +7,8 @@
 	padding-right: 6rem;
 }
 
-.field-multilingual .tab-panel > label > input {
+.field-multilingual .tab-panel > label > input,
+.field-multilingual .tab-panel > label > .frame {
 	margin-top: 0;
 }
 
